[gd_scene load_steps=40 format=3 uid="uid://choqfg4hnhefo"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_15wyd"]
[ext_resource type="Texture2D" uid="uid://u24fm31a02nc" path="res://assets/sprites/Player.png" id="1_x57nc"]
[ext_resource type="Script" path="res://scripts/StateMachine.gd" id="3_luxys"]
[ext_resource type="Script" path="res://scripts/IdleState.gd" id="4_xf1jy"]
[ext_resource type="Script" path="res://scripts/RunState.gd" id="5_3omn0"]
[ext_resource type="Script" path="res://scripts/JumpState.gd" id="6_drvc2"]
[ext_resource type="Script" path="res://scripts/moveComponent.gd" id="7_0qohd"]
[ext_resource type="Script" path="res://scripts/DoubleJumpState.gd" id="7_3ls3y"]
[ext_resource type="Script" path="res://scripts/ClimbState.gd" id="8_alwmd"]
[ext_resource type="Script" path="res://scripts/KnockedBackState.gd" id="9_hus0r"]
[ext_resource type="Script" path="res://scripts/CompleteLevelState.gd" id="10_4ysma"]
[ext_resource type="Script" path="res://scripts/ClimbComponent.gd" id="10_58m00"]
[ext_resource type="AudioStream" uid="uid://bos7si0c3ftt8" path="res://assets/sounds/Jump.mp3" id="12_yp3ry"]
[ext_resource type="AudioStream" uid="uid://cc8256qtqm6jr" path="res://assets/sounds/hit.mp3" id="13_7pph5"]
[ext_resource type="Script" path="res://scripts/invincibleComponent.gd" id="14_r7twd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_r2dpd"]
atlas = ExtResource("1_x57nc")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lt1ux"]
atlas = ExtResource("1_x57nc")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pp2o"]
atlas = ExtResource("1_x57nc")
region = Rect2(96, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_17rqo"]
atlas = ExtResource("1_x57nc")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhq4n"]
atlas = ExtResource("1_x57nc")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ktx4f"]
atlas = ExtResource("1_x57nc")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xpj17"]
atlas = ExtResource("1_x57nc")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0k1de"]
atlas = ExtResource("1_x57nc")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p28f6"]
atlas = ExtResource("1_x57nc")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnos4"]
atlas = ExtResource("1_x57nc")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rnjn"]
atlas = ExtResource("1_x57nc")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1xka"]
atlas = ExtResource("1_x57nc")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kj77e"]
atlas = ExtResource("1_x57nc")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5l45c"]
atlas = ExtResource("1_x57nc")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yuwtr"]
atlas = ExtResource("1_x57nc")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4wjx"]
atlas = ExtResource("1_x57nc")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1i76u"]
atlas = ExtResource("1_x57nc")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxyom"]
atlas = ExtResource("1_x57nc")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ceke"]
atlas = ExtResource("1_x57nc")
region = Rect2(144, 48, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_36vtm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r2dpd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lt1ux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pp2o")
}],
"loop": false,
"name": &"climb_mountain",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_17rqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhq4n")
}],
"loop": false,
"name": &"climb_rope",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ktx4f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xpj17")
}],
"loop": false,
"name": &"double_jump",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0k1de")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p28f6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnos4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rnjn")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1xka")
}],
"loop": false,
"name": &"jump",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kj77e")
}],
"loop": false,
"name": &"knocked_back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5l45c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yuwtr")
}],
"loop": false,
"name": &"open_door",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4wjx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1i76u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxyom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ceke")
}],
"loop": false,
"name": &"run",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_nbxed"]
radius = 6.0

[sub_resource type="Animation" id="Animation_iorx4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_2t6pa"]
resource_name = "invincible"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qt7vp"]
_data = {
"RESET": SubResource("Animation_iorx4"),
"invincible": SubResource("Animation_2t6pa")
}

[node name="Player" type="CharacterBody2D"]
z_index = 5
collision_layer = 2
collision_mask = 3
script = ExtResource("1_15wyd")
health = 7

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(16, -9)
sprite_frames = SubResource("SpriteFrames_36vtm")
animation = &"open_door"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(16, -8)
shape = SubResource("CircleShape2D_nbxed")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(16, -6)
target_position = Vector2(8, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(16, -6)
target_position = Vector2(-7, 0)

[node name="RayCastDown" type="RayCast2D" parent="."]
position = Vector2(16, -4)
target_position = Vector2(0, 5)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qt7vp")
}

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_luxys")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("character", "animated_sprite", "move_component")]
script = ExtResource("4_xf1jy")
character = NodePath("../..")
animated_sprite = NodePath("../../AnimatedSprite2D")
move_component = NodePath("../../MoveComponent/WalkComponent")

[node name="Run" type="Node" parent="StateMachine" node_paths=PackedStringArray("character", "animated_sprite", "move_component")]
script = ExtResource("5_3omn0")
state = 1
character = NodePath("../..")
animated_sprite = NodePath("../../AnimatedSprite2D")
move_component = NodePath("../../MoveComponent/WalkComponent")

[node name="Jump" type="Node" parent="StateMachine" node_paths=PackedStringArray("character", "animated_sprite", "move_component")]
script = ExtResource("6_drvc2")
state = 2
character = NodePath("../..")
animated_sprite = NodePath("../../AnimatedSprite2D")
move_component = NodePath("../../MoveComponent/WalkComponent")

[node name="DoubleJump" type="Node" parent="StateMachine" node_paths=PackedStringArray("character", "animated_sprite", "move_component")]
script = ExtResource("7_3ls3y")
state = 3
character = NodePath("../..")
animated_sprite = NodePath("../../AnimatedSprite2D")
move_component = NodePath("../../MoveComponent/WalkComponent")

[node name="Climb" type="Node" parent="StateMachine" node_paths=PackedStringArray("character", "animated_sprite", "move_component")]
script = ExtResource("8_alwmd")
state = 4
character = NodePath("../..")
animated_sprite = NodePath("../../AnimatedSprite2D")
move_component = NodePath("../../MoveComponent/ClimbComponent")

[node name="KnockedBack" type="Node" parent="StateMachine" node_paths=PackedStringArray("character", "animated_sprite", "move_component")]
script = ExtResource("9_hus0r")
state = 5
character = NodePath("../..")
animated_sprite = NodePath("../../AnimatedSprite2D")
move_component = NodePath("../../MoveComponent/WalkComponent")

[node name="CompleteLevel" type="Node" parent="StateMachine" node_paths=PackedStringArray("character", "animated_sprite", "move_component")]
script = ExtResource("10_4ysma")
state = 6
character = NodePath("../..")
animated_sprite = NodePath("../../AnimatedSprite2D")
move_component = NodePath("../../MoveComponent/WalkComponent")

[node name="Sounds" type="Node" parent="."]

[node name="JumpSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("12_yp3ry")
bus = &"SFX"

[node name="HitSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("13_7pph5")

[node name="MoveComponent" type="Node" parent="."]

[node name="WalkComponent" type="Node" parent="MoveComponent"]
script = ExtResource("7_0qohd")

[node name="ClimbComponent" type="Node" parent="MoveComponent"]
script = ExtResource("10_58m00")

[node name="InvincibleComponent" type="Node" parent="." node_paths=PackedStringArray("character")]
script = ExtResource("14_r7twd")
character = NodePath("..")

[node name="Timer" type="Timer" parent="InvincibleComponent"]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="InvincibleComponent/Timer" to="InvincibleComponent" method="_on_timer_timeout"]
